front-end/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  labels:
    app: front-end
spec:
  selector:
    matchLabels:
      app: front-end
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: front-end
        image: ducdm99tb/front-end:1.9
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        # env:
        #   - name: CONFIG_FILE
        #     value: product.yaml

      imagePullSecrets:
      - name: token-docker
      restartPolicy: Always
