front-end/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  front-end-service
spec:
    type: NodePort
    selector:
        app: front-end
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
